Added picture to man html

--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,10 @@
                 <p>
                     I took the opportunity to travel abroad while at Stanford. As a first generation student, I jumped at any chance to travel and 
                     experience life outside of my comfort zone. My thirst for life took me to Chile, Rome, Croatia and Germany! The culture, the politics, 
-                    the lifestyles I experienced where all incredible. Never did i think I'd be able to sit at the plaza
+                    the lifestyles I experienced where all incredible. 
+                </p>
+                <p> 
+                    Never did i think I'd be able to sit at the plaza
                      de San Pedro in Chile, or visit the Pope in Rome, see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
                     <br>
                     My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was rather charming. The bratwurst in Germany was different
@@ -72,7 +75,9 @@
                 <p>
                     Check me out on <a href="https://amstudies.stanford.edu/sites/amstudies/files/media/file/as_newsletter_2010.pdf" target="_blank">page 14!</a>
                 </p>
-                <h3>Life at Pinterest</h3>
+            </section>
+            <section id="life-pinterest">
+                <h2>Life at Pinterest</h2>
                 <p>
                     Flashforward to today and now I am a proud Pinployee 📌! I stepped into a few roles but ultimately, human resources was my calling.
                     Pinterest has been an amazing place where I have been able to express myself and grow as a People Operations Specialist. 
