--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             </h2>  
         </header>
         <main>
-                <section id="chat">
+                <section id="main-html">
                     <div class="full-width">
+                        <p> <img src="img/isa-selfie-block.png" alt="pictures of Isaura"/></p>
                         <h2>
-                            Isaura
+                            Don't I look adorable!
                         </h2>
-                        <p> <img src="img/Isaura_Professional_Photo.png" alt="picture of Isaura"/></p>
                     </div>
                 </section>
                 <section id="work">
