--- a/work/index.html
+++ b/work/index.html
@@ -21,7 +21,7 @@
                 </nav>
             </div>
             <div class="full-width">
-                <h1>Pinterest and Isa</h1>
+                <h1><span class="font">Pinterest</span> and Isa</h1>
             </div>
 
         </header>
@@ -47,31 +47,30 @@
                         <span>temporary career path</span>?! 
                     </p>
                     <p>
-                        My day to day at Pinterest requires a few things. Coffee being my top priority <i>(thanks PinCafe!)</i>... 
+                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top priority <i><span class="pinterest-font">PinCafe!</span>)</i>... 
                         followed by perfectly crafted emails, smooth onboarding for new employees and a few friendly calls with my fellow 
-                        Pinployees! As busy as the day gets, I make sure to carve time out and check in with my co-workers. With Pinflex,
+                        <span class="pinterest-font">Pinployees!</span> As busy as the day gets, I make sure to carve time out and check in with my co-workers. With Pinflex,
                         most of us work from home and venture into the office here and there. This only makes it more important to check-in with 
                         each other, our mental health is top priority!
                     </p>
                     <p>
                         As I strive to create remarkable employee experiences through our onboarding process, I ensure that I am cultivating strong 
-                        relationships with other Pinployees so that I create a safe space for those that are current and new employees. 
+                        relationships with other <span class="pinterest-font">Pinployees</span> so that I create a safe space for those that are current and new employees. 
                         Human resources can be a complicated field, I strive to make it a little easier to understand and friendlier for
                         those that are seeking assistance. 
                     </p>
                 <section id="contact">
                     <div class="full-width">
-                        <div class="half-width">
-                            <h2>Let's Connect!</h2>
-                                <p>Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
-                                <br>
-                                I look forward to connecting and learning about you! 
-                            </p>
-                        </div>
-                        <div class="half-width">
+                        <h2>Let's Connect!</h2>
+                                <p>
+                                    Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
+                                </p>
+                                <p>
+                                    I look forward to connecting and learning about you! 
+                                </p>
+                    
                             <img src="../img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
-                            <span class="isaura">Umm, don't I look adorable!</span>
-                        </div>                        
+                            <p>Umm, don't I look adorable!</p>                        
                     </div>
                 </section>
             </section>
