--- a/work/index.html
+++ b/work/index.html
@@ -70,7 +70,7 @@
                                 </p>
                     
                             <img src="../img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
-                            <p>Umm, don't I look adorable!</p>                        
+                            <p><span class="adorable">Umm, don't I look adorable!</span></p>                        
                     </div>
                 </section>
             </section>
