Added border to about

--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
                     I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was quite the experience. 
                     I lived in Casa Zapata, met other first generation students, and embraced my new academic future. I worked at Centro Chicano for most of
                     my years at Stanford, in that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, and helped
-                    entering students feel at home. There is no better feeling than being in your <i>casita!</i>.
+                    entering students feel at home. There is no better feeling than being in your <i>casita!</i>
                 </p>
                 <h3>Chocolate Croissants and Crumbling Empires</h3>
                 <p>
