--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -45,7 +45,9 @@
                     <h2>Warm Cookies and Ice Cold Milk</h2>
                     <p>
                         Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate 
-                        calls my name. Is there any better pairing than <span class="galletas">fresh baked cookies</span> 
+                        calls my name. Is there any better pairing than
+                        <br>
+                        <span class="galletas">fresh baked cookies</span> 
                         and <span class="galletas">ice cold milk</span>? 
                     </p>
                 </div>    
