--- a/about/index.html
+++ b/about/index.html
@@ -24,72 +24,79 @@
         </header>
         <main>
             <section id="early-life">
-                <h2>
-                    Early Life
-                </h2>
-                <p>
-                    Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. 
-                    Early mornings and long hot days would teach me the importance of hard work. 
-                </p>
-                <p>
-                    Waking up at 5am, rushing to put our merchandise, and selling til closing time was a typical weekend at my house.
-                    Monday-Friday I would apply myself to school, and on the weekends it was family time... at the swapmeet.
-                    I'd help my parents sell, display merchandise, and clean up. 
-                </p>
-                <p> <img src="../img/isa-swapmeet.png" alt="picture of Isa and parents"/></p>
-                <p>    
-                    Waking up before the sun rises was 
-                    often difficult as a kid, but now I see the hard work and effort that my parents did for my siblings and I. Without that experience, 
-                    I can't say that I'd be the <i>strong, independent Latina</i> that I am today. 
-                </p>
-                <p>   
-                    My weekdays would be full of essays, presentations, math tests, book reports, art projects,
-                    and most importantly... my path to Stanford University! During highschool, I applied myself to my studies, I joined the 
-                    art club, I spent long hours at the library and made sure everything was in place. All of my hard work ensured that I graduated 
-                    validictorian in highschool and got my my spot at Stanford! 
-                    
+                <div class="full-width">
+                    <h2>
+                        Early Life
+                    </h2>
+                    <p>
+                        Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. 
+                        Early mornings and long hot days would teach me the importance of hard work. 
+                    </p>
+                    <p>
+                        Waking up at 5am, rushing to put our merchandise, and selling til closing time was a typical weekend at my house.
+                        Monday-Friday I would apply myself to school, and on the weekends it was family time... at the swapmeet.
+                        I'd help my parents sell, display merchandise, and clean up. 
+                    </p>
+                    <p> <img src="../img/isa-swapmeet.png" alt="picture of Isa and parents"/></p>
+                    <p>    
+                        Waking up before the sun rises was 
+                        often difficult as a kid, but now I see the hard work and effort that my parents did for my siblings and I. Without that experience, 
+                        I can't say that I'd be the <i>strong, independent Latina</i> that I am today. 
+                    </p>
+                    <p>   
+                        My weekdays would be full of essays, presentations, math tests, book reports, art projects,
+                        and most importantly... my path to Stanford University! During highschool, I applied myself to my studies, I joined the 
+                        art club, I spent long hours at the library and made sure everything was in place. All of my hard work ensured that I graduated 
+                        validictorian in highschool and got my my spot at Stanford! 
+                    </p>
+                </div>
             </section>
             <section id="stanford">
-                <h2>Stanford</h2>
-                <h3>Class of 2010 🎓</h3>
-                <p>
-                    I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was quite the experience. 
-                    I lived in Casa Zapata, met other first generation students, and embraced my new academic future. I worked at Centro Chicano for most of
-                    my years at Stanford, in that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, and helped
-                    entering students feel at home. There is no better feeling than being in your <i>casita!</i>
-                </p>
-                <h3>Chocolate Croissants and Crumbling Empires</h3>
-                <p>
-                    I took the opportunity to travel abroad while at Stanford. As a first generation student, I jumped at any chance to travel and 
-                    experience life outside of my comfort zone. My thirst for life took me to Chile, Rome, Croatia and Germany! The culture, the politics, 
-                    the lifestyles I experienced where all incredible. 
-                </p>
-                <p> 
-                    Never did i think I'd be able to sit at the plaza
-                     de San Pedro in Chile, or visit the Pope in Rome, see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
-                    <br>
-                    My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was rather charming. The bratwurst in Germany was different
-                    yet delicious. BUT the <i>chocolate croissants</i> I had in Germany! Oh my, oh my, those were to die for! Dreamy, soft, melty chocolate
-                    nestled in a warm flaky croissant... its what dreams are made of! <i>So köstlich!</i>
-                </p>
-                <p>
-                    Check me out on <a href="https://amstudies.stanford.edu/sites/amstudies/files/media/file/as_newsletter_2010.pdf" target="_blank">page 14!</a>
-                </p>
+                <div class="full-width">
+                    <h2>Stanford</h2>
+                    <h3>Class of 2010 🎓</h3>
+                    <p>
+                        I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was quite the experience. 
+                        I lived in Casa Zapata, met other first generation students, and embraced my new academic future. I worked at Centro Chicano for most of
+                        my years at Stanford, in that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, and helped
+                        entering students feel at home. There is no better feeling than being in your <i>casita!</i>
+                    </p>
+                    <h3>Chocolate Croissants and Crumbling Empires</h3>
+                    <p>
+                        I took the opportunity to travel abroad while at Stanford. As a first generation student, I jumped at any chance to travel and 
+                        experience life outside of my comfort zone. My thirst for life took me to Chile, Rome, Croatia and Germany! The culture, the politics, 
+                        the lifestyles I experienced where all incredible. 
+                    </p>
+                    <p> 
+                        Never did i think I'd be able to sit at the plaza
+                        de San Pedro in Chile, or visit the Pope in Rome, see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
+                        <br>
+                        My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was rather charming. The bratwurst in Germany was different
+                        yet delicious. BUT the <i>chocolate croissants</i> I had in Germany! Oh my, oh my, those were to die for! Dreamy, soft, melty chocolate
+                        nestled in a warm flaky croissant... its what dreams are made of! <i>So köstlich!</i>
+                    </p>
+                    <p>
+                        Check me out on <a href="https://amstudies.stanford.edu/sites/amstudies/files/media/file/as_newsletter_2010.pdf" target="_blank">page 14!</a>
+                    </p>
+                </div>
             </section>
             <section id="life-pinterest">
-                <h2>Life at Pinterest</h2>
-                <p>
-                    Flashforward to today and now I am a proud Pinployee 📌! I stepped into a few roles but ultimately, human resources was my calling.
-                    Pinterest has been an amazing place where I have been able to express myself and grow as a People Operations Specialist. 
-                </p>
-                <p>I take pride in my role at Pinterest, helping other Pinployees navigate the rather complicated world of human resources is my calling.
-                    Is there any greater feeling than sending out a well worded email?
-                </p>
+                <div class="full-width">
+                    <h2>Life at Pinterest</h2>
+                    <p>
+                        Flashforward to today and now I am a proud Pinployee 📌! I stepped into a few roles but ultimately, human resources was my calling.
+                        Pinterest has been an amazing place where I have been able to express myself and grow as a People Operations Specialist. 
+                    </p>
+                    <p>I take pride in my role at Pinterest, helping other Pinployees navigate the rather complicated world of human resources is my calling.
+                        Is there any greater feeling than sending out a well worded email?
+                    </p>
+                </div>
             </section>
-          <footer>
-            <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023</h3>
-          </footer>  
+            <footer>
+                <div class="full-width">
+                    <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023</h3>
+                </div>
+            </footer>  
         </main>
-
     </body>
 </html>
