--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
+        <header class="puzzle-header">
             <div class="full-width">
                 <nav>
                     <ul>
