--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </h2>
             <h2>
                 I take pride in knowing that my work comes first, and puzzling comes second. Actually, its a close tie between 
-                puzzling and eating fresh baked cookies!
+                puzzling and eating <br>fresh baked cookies!
             </h2>  
         </header>
         <main>
