--- a/about/index.html
+++ b/about/index.html
@@ -69,10 +69,11 @@
                     </p>
                     <p> 
                         Never did i think I'd be able to sit at the plaza
-                        de San Pedro in Chile, or visit the Pope in Rome, see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
-                        <br>
-                        My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was rather charming. The bratwurst in Germany was different
-                        yet delicious. BUT the <i>chocolate croissants</i> I had in Germany! Oh my, oh my, those were to die for! Dreamy, soft, melty chocolate
+                        de San Pedro in Chile, or visit the Colosseum in Rome, see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
+                    </p>
+                    <p>
+                        My favorite part about traveling was the <i>food</i>. The palta I ate in Chile was charming. The bratwurst in Germany was different
+                        yet delicious. The gelatto in Rome was so refreshing. BUT the <i>chocolate croissants</i> I had in Germany! Oh my, oh my, those were to die for! Dreamy, soft, melty chocolate
                         nestled in a warm flaky croissant... its what dreams are made of! <i>So köstlich!</i>
                     </p>
                     <p>
