--- a/work/index.html
+++ b/work/index.html
@@ -46,7 +46,7 @@
                 <div class="full-width">
                     <h2>People Operations Specialist</h2>
                     <p>
-                        Ten years later, I am a proud member of the HR team at Pinterest! Umm, wasn't HR supposed to be a 
+                        Ten years later, I am a proud member of the HR team at <span class="pinterest-font">Pinterest!</span> Umm, wasn't HR supposed to be a 
                         <span>temporary career path</span>?! 
                     </p>
                     <p>
