--- a/work/index.html
+++ b/work/index.html
@@ -50,7 +50,7 @@
                         <span>temporary career path</span>?! 
                     </p>
                     <p>
-                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top priority <i><span class="pinterest-font">PinCafe!</span>)</i>... 
+                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top priority (thanks <i><span class="pinterest-font">PinCafe!</span>)</i>... 
                         followed by perfectly crafted emails, smooth onboarding for new employees and a few friendly calls with my fellow 
                         <span class="pinterest-font">Pinployees!</span> As busy as the day gets, I make sure to carve time out and check in with my co-workers. With Pinflex,
                         most of us work from home and venture into the office here and there. This only makes it more important to check-in with 
