Added opacity to header in hobbies

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="full-width">
                 <h1>Lets puzzle! </h1>
-                <h3>AND eat cookies too!</h3>
+                <h3>& eat cookies!</h3>
             </div>
 
         </header>
