Changed hobbies section

--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -19,7 +19,7 @@
                 </nav>
             </div>
             <div class="full-width">
-                <h1>Lets puzzle! </h1>
+                <h1>Lets Puzzle! </h1>
                 <h3>& eat cookies!</h3>
             </div>
 
