--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
                         Early Life
                     </h2>
                     <p>
-                        Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air swapmeet. 
+                        Born & raised in Pomona, I would spend the weekends working with my parents at the Bel-Air Swapmeet. 
                         Early mornings and long hot days would teach me the importance of hard work. 
                     </p>
                     <p>
