--- a/about/index.html
+++ b/about/index.html
@@ -33,21 +33,21 @@
                         Early mornings and long hot days would teach me the importance of hard work. 
                     </p>
                     <p>
-                        Waking up at 5am, rushing to put our merchandise, and selling til closing time was a typical weekend at my house.
-                        Monday-Friday I would apply myself to school, and on the weekends it was family time... at the swapmeet.
+                        Waking up at 5am, rushing to put out merchandise, and selling til closing time was a typical weekend with my family.
+                        Monday-Friday I would apply myself to school, and on the weekends it was family time... at the swapmeet!
                         I'd help my parents sell, display merchandise, and clean up. 
                     </p>
                     <p> <img src="../img/isa-swapmeet.png" alt="picture of Isa and parents"/></p>
                     <p>    
-                        Waking up before the sun rises was 
-                        often difficult as a kid, but now I see the hard work and effort that my parents did for my siblings and I. Without that experience, 
+                        Waking up before the sun rises was often difficult as a kid, but now I see 
+                        the hard work and effort that my parents did for my siblings and I. Without that experience, 
                         I can't say that I'd be the <i>strong, independent Latina</i> that I am today. 
                     </p>
                     <p>   
                         My weekdays would be full of essays, presentations, math tests, book reports, art projects,
                         and most importantly... my path to Stanford University! During highschool, I applied myself to my studies, I joined the 
-                        art club, I spent long hours at the library and made sure everything was in place. All of my hard work ensured that I graduated 
-                        validictorian in highschool and got my my spot at Stanford! 
+                        art club, spent long hours at the library and made sure everything was in place. All of my hard work ensured that I graduated 
+                        validictorian in highschool and got my spot at Stanford! 
                     </p>
                 </div>
             </section>
