--- a/about/index.html
+++ b/about/index.html
@@ -57,14 +57,14 @@
                     <h3>Class of 2010 🎓</h3>
                     <p>
                         I graduate class of 2010, with a smile on my face and pride like no other. My first year at Stanford was quite the experience. 
-                        I lived in Casa Zapata, met other first generation students, and embraced my new academic future. I worked at Centro Chicano for most of
-                        my years at Stanford, in that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, and helped
-                        entering students feel at home. There is no better feeling than being in your <i>casita!</i>
+                        I lived in Casa Zapata, met other first generation students, and embraced my new academic future. I worked at El Centro Chicano for most of
+                        my years at Stanford. in that time, I helped set up the Zoot Suit play production, provided other weekly activites to students, and helped
+                        entering students feel at home. After all, there is no better feeling than being in your <i>casita!</i>
                     </p>
                     <h3>Chocolate Croissants and Crumbling Empires</h3>
                     <p>
                         I took the opportunity to travel abroad while at Stanford. As a first generation student, I jumped at any chance to travel and 
-                        experience life outside of my comfort zone. My thirst for life took me to Chile, Rome, Croatia and Germany! The culture, the politics, 
+                        experience life outside of my comfort zone. My thirst for new experiences took me to Chile, Rome, Croatia and Germany! The culture, the politics, 
                         the lifestyles I experienced where all incredible. 
                     </p>
                     <p> 
