--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -35,7 +35,7 @@
                         <p>
                             You build a magical scenery piece by piece and get to see your hard work come together as a beautiful 
                             unicorn... or enchanted cottage... or a solid color!
-                            The sweet feeling of setting down that last piece perfectly is rather magical. 
+                            The sweet feeling of setting down that last piece perfectly is rather <i>magical</i>. 
                         </p>
                     </div>
             </section>
