--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
             </h2>
             <h2>
                 I take pride in knowing that my work comes first, and puzzling comes second. Actually, its a close tie between 
-                puzzling and eating <br>fresh baked cookies!
+                puzzling and eating fresh baked cookies!
             </h2>  
         </header>
         <main>
             <section id="main-html">
                 <div class="full-width">
                     <p> <img src="img/isa-selfie-block.png" alt="pictures of Isaura"/></p>
-                    <h2>
+                    <h3>
+                        Y'know what, ✨<i>selfies</i>✨ <br>come before work, puzzles and cookies!
+                    </h3>
+                   <h2>
                         Don't I look adorable!
                     </h2>
                 </div>
