Added to work html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css2?family=Anton&family=Josefin+Sans:wght@600&family=Lobster&family=Mogra&family=Pacifico&display=swap" rel="stylesheet">
     </head>
-
     <body>
         <header>
             <div class="full-width">
@@ -19,7 +18,9 @@
                     </ul>
                 </nav>
             </div>
-            <h1>Welcome to the world of Isa! </h1>
+            <h1>
+                Welcome to the world of Isa!
+            </h1>
             <h2>
                 You can usually find me in the Pinterest office sending out well crafted emails and chatting away at the PinCafe. 
             </h2>
@@ -31,20 +32,24 @@
         <main>
             <section id="main-html">
                 <div class="full-width">
-                    <p> <img src="img/isa-selfie-block.png" alt="pictures of Isaura"/></p>
+                    <p> 
+                        <img src="img/isa-selfie-block.png" alt="pictures of Isaura"/>
+                    </p>
                     <h3>
                         Y'know what, ✨<i>selfies</i>✨ <br>come before work, puzzles and cookies!
                     </h3>
-                   <h2>
+                    <h2>
                         Don't I look adorable!
                     </h2>
                 </div>
             </section>
             <footer>
                 <div class="full-width">
-                    <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023</h3>
+                    <h3>
+                        Created by <span><a href="https://holabeatriz.com/" target="_blank"> Beatriz </a></span>2023
+                    </h3>
                 </div>
-                </footer>
+            </footer>
         </main>
     </body>
 </html>
