--- a/work/index.html
+++ b/work/index.html
@@ -21,14 +21,17 @@
                 </nav>
             </div>
             <div class="full-width">
-                <h1><span class="font">Pinterest</span> and Isa</h1>
+                <h1>
+                    <span class="font">Pinterest</span> and Isa
+                </h1>
             </div>
-
         </header>
         <main>
             <section id="hr">
                 <div class="full-width">
-                    <h2>Finding My Calling</h2>
+                    <h2>
+                        Finding My Calling
+                    </h2>
                     <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career journey took me to unexpected places. 
                         I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
                         managed my dad's business, and soon started to dabble in the world of human resources.
@@ -44,7 +47,9 @@
             </section>
             <section id="pos">
                 <div class="full-width">
-                    <h2>People Operations Specialist</h2>
+                    <h2>
+                        People Operations Specialist
+                    </h2>
                     <p>
                         Ten years later, I am a proud member of the HR team at <span class="pinterest-font">Pinterest!</span> Umm, wasn't HR supposed to be a 
                         <span>temporary career path</span>?! 
@@ -61,12 +66,14 @@
                         relationships with other <span class="pinterest-font">Pinployees</span> so that I create a safe space for those that are current and new employees. 
                         Human resources can be a complicated field, I strive to make it a little easier to understand and friendlier for
                         those that are seeking assistance. 
-                        </p>
+                    </p>
                 </div>
             </section>
             <section id="contact">
                 <div class="full-width">
-                    <h2>Let's Connect!</h2>
+                    <h2>
+                        Let's Connect!
+                    </h2>
                     <p>
                         Check out my <span><a href="https://www.linkedin.com/in/isauraguerrero/" target="_blank">LinkedIn</a></span>!
                     </p>
@@ -74,12 +81,16 @@
                         I look forward to connecting and learning about you! 
                     </p>
                     <img src="../img/Isaura_Professional_Photo.png" alt="picture of Isaura"/>
-                    <p><span class="adorable">Umm, don't I look adorable!</span></p>                        
+                    <p>
+                        <span class="adorable">Umm, don't I look adorable!</span>
+                    </p>                        
                 </div>
             </section>
             <footer>
                 <div class="full-width">
-                    <h3>Created by <span><a href="https://holabeatriz.com/" target="_blank">Beatriz</a></span> 2023</h3>
+                    <h3>
+                        Created by <span><a href="https://holabeatriz.com/" target="_blank">Beatriz</a></span> 2023
+                    </h3>
                 </div>
             </footer>  
         </main>
