--- a/work/index.html
+++ b/work/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="full-width">
                 <h1>
-                    <span class="font">Pinterest</span> and Isa
+                    <span class="font">Pinterest</span> <br>and Isa
                 </h1>
             </div>
         </header>
@@ -39,9 +39,9 @@
                     <p>
                         Not knowing that human resources would be my calling, I started working in HR while at TriNet. The role of 
                         Client Success Consultant seemed like a good place to rest and find myself while I looked for a career path better 
-                        suited for me. I had been eyeing the world of non-profits and possibly self employment, maybe even another degree? As I stepped deeper into my role of 
-                        Client Success Consultant, I realized I really enjoyed informing people, reading up on the latest policy changes at work, and just
-                        helping others understand rules and regulations at work. 
+                        suited for me. I had been eyeing the world of non-profits and possibly self employment, maybe even another degree? 
+                        As I stepped deeper into my role of Client Success Consultant, I realized I really enjoyed informing people, 
+                        reading up on the latest policy changes at work, and just helping others understand rules and regulations at work.         
                     </p>
                 </div>
             </section>
@@ -51,11 +51,12 @@
                         People Operations Specialist
                     </h2>
                     <p>
-                        Ten years later, I am a proud member of the HR team at <span class="pinterest-font">Pinterest!</span> Umm, wasn't HR supposed to be a 
-                        <span>temporary career path</span>?! 
+                        Ten years later, I am a proud member of the HR team at <span class="pinterest-font">Pinterest!</span> Umm, 
+                        wasn't HR supposed to be a <span>temporary career path</span>?! 
                     </p>
                     <p>
-                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top priority (thanks <i><span class="pinterest-font">PinCafe!</span>)</i>... 
+                        My day to day at <span class="pinterest-font">Pinterest</span> requires a few things. Coffee being my top priority 
+                        (thanks <i><span class="pinterest-font">PinCafe!</span>)</i>... 
                         followed by perfectly crafted emails, smooth onboarding for new employees and a few friendly calls with my fellow 
                         <span class="pinterest-font">Pinployees!</span> As busy as the day gets, I make sure to carve time out and check-in with my co-workers. With Pinflex,
                         most of us work from home and venture into the office here and there. This only makes it more important to check-in with 
