--- a/about/index.html
+++ b/about/index.html
@@ -74,7 +74,7 @@
                         the lifestyles I experienced where all incredible. 
                     </p>
                     <p> 
-                        Never did i think I'd be able to sit at the plaza
+                        Never did I think I'd be able to sit at the plaza
                         de San Pedro in Chile, or visit the Colosseum in Rome, see the Berlin Wall or visit the deeply emotional Holocaust Museum. 
                     </p>
                     <p>
