Changed work header

--- a/work/index.html
+++ b/work/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="full-width">
                 <h1>
-                    <span class="font">Pinterest</span> <br>and Isa
+                    <span class="font">Pinterest</span> & Isa
                 </h1>
             </div>
         </header>
