Html and css updates

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <img src="img/isa-selfie-block.png" alt="pictures of Isaura"/>
                     </p>
                     <h3>
-                        Y'know what, ✨<i>selfies</i>✨ <br>come before work, puzzles and cookies!
+                        Y'know what, ✨<i>selfies</i>✨ <br>come before everything!
                     </h3>
                 </div>
             </section>
