--- a/hobbies/index.html
+++ b/hobbies/index.html
@@ -43,8 +43,11 @@
                 <div class="full-width">
                     <h2>Warm Cookies and Ice Cold Milk</h2>
                     <p>
-                        Aside from building puzzles, I'd say my second love is eating fresh baked cookies! The warm gooey chocolate 
-                        calls my name. Is there any better pairing than
+                        Aside from building puzzles, I'd say my second love is eating fresh baked cookies! 
+                        <br>
+                        The warm gooey chocolate calls my name.
+                        <br>    
+                        Is there any better pairing than
                         <br>
                         <span class="galletas">fresh baked cookies</span> 
                         and <span class="galletas">ice cold milk</span>? 
