--- a/work/index.html
+++ b/work/index.html
@@ -32,7 +32,7 @@
                     <h2>
                         Finding My Calling
                     </h2>
-                    <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career journey took me to unexpected places. 
+                    <p>As I navigated life after Stanford, <i>Go Cardinals!</i>, my career took me to unexpected places. 
                         I stepped into the role of AmeriCorps VISTA Member, helped create dignified jobs for low-income women at WAGES, 
                         managed my dad's business, and soon started to dabble in the world of human resources.
                     </p>
